--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://moses99z.github.io/my_portfolio/",
   "name": "blog",
   "version": "0.1.0",
   "private": true,
@@ -16,6 +17,7 @@
     "bootstrap": "^5.0.0-beta2",
     "font-awesome": "^4.7.0",
     "framer-motion": "^3.6.7",
+    "gh-pages": "^3.1.0",
     "jquery": "^3.5.1",
     "material-components-web": "^10.0.0",
     "popper.js": "^1.16.1",
